<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragment.MembersFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <ImageView
                android:id="@+id/rockImg"

                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_centerVertical="true"
                android:clickable="true"
                android:contentDescription="@string/rock_img_content_description"
                android:focusable="true"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/rock" />

            <ImageView
                android:id="@+id/paperImg"

                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_centerVertical="true"
                android:layout_marginTop="20dp"
                android:clickable="true"
                android:contentDescription="@string/paper_img_content_description"

                android:focusable="true"
                app:layout_constraintEnd_toEndOf="parent"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rockImg"
                app:srcCompat="@drawable/paper" />

            <ImageView
                android:id="@+id/scissorImg"

                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_centerVertical="true"
                android:layout_marginTop="20dp"
                android:clickable="true"
                android:contentDescription="@string/scissor_img_content_description"

                android:focusable="true"
                app:layout_constraintEnd_toEndOf="parent"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/paperImg"
                app:srcCompat="@drawable/scissor" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.core.widget.NestedScrollView>

</RelativeLayout>

