<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <!--    3P - Three Players-->

    <androidx.core.widget.NestedScrollView
        android:id="@+id/gameOptions3PNestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        tools:context=".ui.fragment.MembersFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/roundTitle3PTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/choose_an_option_tv"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/rock3PImg"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:clickable="true"
                android:contentDescription="@string/rock_img_content_description"
                android:focusable="true"
                app:srcCompat="@drawable/rock" />

            <ImageView
                android:id="@+id/paper3PImg"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/black"
                android:clickable="true"
                android:contentDescription="@string/paper_img_content_description"
                android:focusable="true"
                app:srcCompat="@drawable/paper" />

            <ImageView
                android:id="@+id/scissor3PImg"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:clickable="true"
                android:contentDescription="@string/scissor_img_content_description"
                android:focusable="true"
                app:srcCompat="@drawable/scissor" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/downCounter3PConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <TextView
            android:id="@+id/downCounter3PTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="50sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/roundResult3PNestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        tools:context=".ui.fragment.MembersFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/resultTitle3PTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text=""
                android:textSize="40sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20sp"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@+id/resultTitle3PTv">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="10sp">

                    <ImageView
                        android:id="@+id/userChoice3PImg"
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:clickable="true"
                        android:contentDescription="@string/rock_img_content_description"
                        android:focusable="true"
                        app:srcCompat="@drawable/rock" />

                    <TextView
                        android:id="@+id/userLegend3PTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/you_tv"
                        android:textSize="25sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/userChoice3PImg" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="10sp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:paddingStart="10sp"
                        android:paddingEnd="10sp">

                        <ImageView
                            android:id="@+id/appPlayer1Choice3PImg"
                            android:layout_width="90dp"
                            android:layout_height="90dp"
                            android:clickable="true"
                            android:contentDescription="@string/scissor_img_content_description"
                            android:focusable="true"
                            app:srcCompat="@drawable/scissor" />

                        <TextView
                            android:id="@+id/appPlayer1Legend3PTv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/bot_1_tv"
                            android:textSize="25sp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/userChoice3PImg" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:paddingStart="10sp"
                        android:paddingEnd="10sp">

                        <ImageView
                            android:id="@+id/appPlayer2Choice3PImg"
                            android:layout_width="90dp"
                            android:layout_height="90dp"
                            android:backgroundTint="@color/black"
                            android:clickable="true"
                            android:contentDescription="@string/paper_img_content_description"
                            android:focusable="true"
                            app:srcCompat="@drawable/paper" />

                        <TextView
                            android:id="@+id/appPlayer2Legend3PTv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/bot_2_tv"
                            android:textSize="25sp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/userChoice3PImg" />

                    </LinearLayout>
                </LinearLayout>

                <Button
                    android:id="@+id/playAgain3PBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10sp"
                    android:text="@string/play_again_button"
                    android:textSize="18sp" />


            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</RelativeLayout>

